--- a/index.html
+++ b/index.html
@@ -1,63 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
-<header>
-<!-- Floating Background Shapes -->
-<div class="shape" style="width:60px; height:60px; background:#fff; top:10%; left:15%;"></div>
-<div class="shape square" style="width:50px; height:50px; background:#fff; top:30%; left:70%;"></div>
-<div class="shape triangle" style="top:60%; left:25%;"></div>
-<div class="shape" style="width:80px; height:80px; background:#fff; top:75%; left:80%;"></div>
-
-</header>
-
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lost Fund Assistance – Home</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Lost Fund Assistance – Startseite</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background: linear-gradient(270deg,#4facfe,#43e97b,#ff6ec4);
+      background-size: 800% 800%;
+      animation: bgShift 18s ease infinite;
+      margin:0; padding:0;
+      color:#fff;
+    }
+    @keyframes bgShift {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+    }
+    header {
+      display:flex; justify-content: space-between; align-items:center;
+      padding:20px 40px; background: rgba(0,0,0,0.25);
+      position:sticky; top:0; z-index:1000; backdrop-filter: blur(6px);
+    }
+    header h1 {margin:0; font-size:28px;}
+    nav a {color:#fff; text-decoration:none; margin-left:20px; font-weight:600;}
+    nav a:hover{opacity:0.8;}
+    .hero {
+      text-align:center; padding:120px 20px;
+    }
+    .hero h2 {font-size:40px; margin-bottom:20px;}
+    .hero p {font-size:20px; max-width:700px; margin:0 auto;}
+    footer {
+      text-align:center; color:#fff; margin-top:60px; padding:20px;
+      background: rgba(0,0,0,0.25); font-size:14px; opacity:0.9;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Lost Fund Assistance</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html">Startseite</a>
+      <a href="about.html">Über uns</a>
+      <a href="contact.html">Kontakt</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h2>Recover What You Lost, Rebuild Your Confidence</h2>
-    <p>Professional consultants helping individuals reclaim funds lost online.</p>
-    <a href="contact.html" class="btn">Start Your Recovery</a>
+    <h2>Ihre Hoffnung auf Rückerstattung beginnt hier</h2>
+    <p>Wir sind ein Team professioneller Berater, das sich darauf spezialisiert hat, Menschen zu helfen, die ihre Gelder durch Online-Betrug oder irreführende Investitionen verloren haben.  
+    Mit Vertrauen, Erfahrung und Engagement stehen wir an Ihrer Seite, um die bestmögliche Lösung zu finden.</p>
   </section>
 
-  <div class="container">
-    <div class="card">
-      <h3>Trusted Guidance</h3>
-      <p>We understand the emotional and financial stress of losing money online. Our dedicated team of consultants provides personalized strategies to help you recover your funds.</p>
-    </div>
-
-    <div class="card">
-      <h3>How We Help</h3>
-      <p>From analyzing your case to guiding you through the recovery process, we ensure transparency, confidentiality, and professionalism at every step.</p>
-    </div>
-
-    <div class="card">
-      <h3>Why Choose Us?</h3>
-      <ul>
-        <li>✔ Confidential & Secure</li>
-        <li>✔ Experienced Consultants</li>
-        <li>✔ Step-by-Step Support</li>
-        <li>✔ Genuine Commitment to Recovery</li>
-      </ul>
-    </div>
-  </div>
-
   <footer>
-    <p>&copy; 2025 Lost Fund Assistance. All rights reserved.</p>
+    © 2025 Lost Fund Assistance — Alle Rechte vorbehalten
   </footer>
 </body>
 </html>
