--- a/about.html
+++ b/about.html
@@ -1,43 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<header>
-<!-- Floating Background Shapes -->
-<div class="shape" style="width:60px; height:60px; background:#fff; top:10%; left:15%;"></div>
-<div class="shape square" style="width:50px; height:50px; background:#fff; top:30%; left:70%;"></div>
-<div class="shape triangle" style="top:60%; left:25%;"></div>
-<div class="shape" style="width:80px; height:80px; background:#fff; top:75%; left:80%;"></div>
-
-</header>
-
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us – Lost Fund Assistance</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Lost Fund Assistance – Über uns</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background: linear-gradient(270deg,#4facfe,#43e97b,#ff6ec4);
+      background-size: 800% 800%;
+      animation: bgShift 18s ease infinite;
+      margin:0; padding:0; color:#fff;
+    }
+    @keyframes bgShift {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+    }
+    header {
+      display:flex; justify-content: space-between; align-items:center;
+      padding:20px 40px; background: rgba(0,0,0,0.25);
+      position:sticky; top:0; z-index:1000; backdrop-filter: blur(6px);
+    }
+    header h1 {margin:0; font-size:28px;}
+    nav a {color:#fff; text-decoration:none; margin-left:20px; font-weight:600;}
+    nav a:hover{opacity:0.8;}
+    .content {
+      max-width:800px; margin:60px auto; padding:20px; background:rgba(0,0,0,0.35);
+      border-radius:12px;
+    }
+    .content h2 {font-size:32px; margin-bottom:20px;}
+    .content p {font-size:18px; line-height:1.6;}
+    footer {
+      text-align:center; color:#fff; margin-top:60px; padding:20px;
+      background: rgba(0,0,0,0.25); font-size:14px; opacity:0.9;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Lost Fund Assistance</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html">Startseite</a>
+      <a href="about.html">Über uns</a>
+      <a href="contact.html">Kontakt</a>
     </nav>
   </header>
 
-  <div class="container">
-    <h2>About Us</h2>
-    <div class="card">
-      <p>At <strong>Lost Fund Assistance</strong>, we specialize in helping people who have lost money online through scams, fraud, or failed transactions. Our mission is to restore hope and provide practical recovery solutions tailored to your unique situation.</p>
-      <p>Our consultants come from backgrounds in finance, law, and cybersecurity, combining their expertise to ensure that every client receives the best possible guidance.</p>
-      <p><em>We believe everyone deserves a second chance — and we’re here to walk beside you in your recovery journey.</em></p>
-    </div>
+  <div class="content">
+    <h2>Wer wir sind</h2>
+    <p>Lost Fund Assistance ist ein internationales Beratungsunternehmen, das sich auf die Unterstützung von Opfern von Online-Betrug und finanziellen Verlusten spezialisiert hat.  
+    Unser Ziel ist es, Ihnen Hoffnung und konkrete Lösungen zu geben, wenn Sie glauben, dass alles verloren ist.</p>
+
+    <h2>Unsere Mission</h2>
+    <p>Wir glauben, dass jeder Mensch das Recht auf Transparenz, Gerechtigkeit und eine zweite Chance hat.  
+    Mit unserem globalen Netzwerk von Partnern und Experten setzen wir alles daran, Ihre Situation zu analysieren und mögliche Wege zur Rückgewinnung Ihrer Gelder aufzuzeigen.</p>
+
+    <h2>Warum wir?</h2>
+    <p>- Mehrjährige Erfahrung im Bereich Finanzberatung  
+    - Persönlicher Ansatz für jeden Kunden  
+    - Diskrete und vertrauliche Bearbeitung Ihrer Daten  
+    - Internationale Reichweite</p>
   </div>
 
   <footer>
-    <p>&copy; 2025 Lost Fund Assistance. All rights reserved.</p>
+    © 2025 Lost Fund Assistance — Alle Rechte vorbehalten
   </footer>
 </body>
 </html>
