--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
       background-size: 800% 800%;
       animation: bgShift 18s ease infinite;
       margin:0; padding:0; color:#fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     @keyframes bgShift {
       0%{background-position:0% 50%}
@@ -25,14 +28,52 @@
     header h1 {margin:0; font-size:28px;}
     nav a {color:#fff; text-decoration:none; margin-left:20px; font-weight:600;}
     nav a:hover{opacity:0.8;}
-    .content {
-      max-width:800px; margin:60px auto; padding:20px; background:rgba(0,0,0,0.35);
-      border-radius:12px;
+    main {flex: 1;}
+    .hero {
+      text-align:center; padding:100px 20px;
+      background: rgba(0,0,0,0.35); margin-bottom:40px;
     }
-    .content h2 {font-size:32px; margin-bottom:20px;}
-    .content p {font-size:18px; line-height:1.6;}
+    .hero h2 {font-size:40px; margin-bottom:20px;}
+    .hero p {font-size:18px; max-width:800px; margin:0 auto;}
+    .section {
+      max-width:1100px; margin:0 auto; padding:60px 20px;
+    }
+    .section h2 {font-size:32px; margin-bottom:20px; text-align:center;}
+    .section p {font-size:18px; line-height:1.6; margin-bottom:20px; color:#f5f5f5;}
+    .values {
+      display:grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+      gap:20px; margin-top:40px;
+    }
+    .value-box {
+      background: rgba(0,0,0,0.35); padding:30px; border-radius:14px;
+      text-align:center; transition: transform 0.3s;
+    }
+    .value-box:hover {transform: translateY(-5px);}
+    .value-box h3 {margin-bottom:15px; font-size:22px;}
+    .steps {
+      display:grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+      gap:20px; margin-top:40px;
+    }
+    .step-box {
+      background: rgba(255,255,255,0.1); padding:25px; border-radius:14px;
+      text-align:center;
+    }
+    .step-box h4 {margin-bottom:10px; font-size:20px;}
+    .step-box p {font-size:16px;}
+    .cta {
+      text-align:center; padding:60px 20px; margin:40px 0;
+      background: rgba(0,0,0,0.45);
+    }
+    .cta h2 {font-size:28px; margin-bottom:20px;}
+    .cta a {
+      display:inline-block; padding:14px 28px; font-size:18px;
+      background: linear-gradient(90deg,#ff6ec4,#43e97b);
+      color:#fff; text-decoration:none; border-radius:8px;
+      font-weight:600; transition:0.3s;
+    }
+    .cta a:hover {opacity:0.9;}
     footer {
-      text-align:center; color:#fff; margin-top:60px; padding:20px;
+      text-align:center; color:#fff; padding:20px;
       background: rgba(0,0,0,0.25); font-size:14px; opacity:0.9;
     }
   </style>
@@ -47,21 +88,93 @@
     </nav>
   </header>
 
-  <div class="content">
-    <h2>Wer wir sind</h2>
-    <p>Lost Fund Assistance ist ein internationales Beratungsunternehmen, das sich auf die Unterstützung von Opfern von Online-Betrug und finanziellen Verlusten spezialisiert hat.  
-    Unser Ziel ist es, Ihnen Hoffnung und konkrete Lösungen zu geben, wenn Sie glauben, dass alles verloren ist.</p>
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <h2>Über uns</h2>
+      <p>Wir sind Ihr vertrauensvoller Partner, wenn es darum geht, verlorene Gelder zurückzufordern.  
+      Mit internationaler Reichweite und jahrelanger Erfahrung stehen wir an Ihrer Seite.</p>
+    </section>
 
-    <h2>Unsere Mission</h2>
-    <p>Wir glauben, dass jeder Mensch das Recht auf Transparenz, Gerechtigkeit und eine zweite Chance hat.  
-    Mit unserem globalen Netzwerk von Partnern und Experten setzen wir alles daran, Ihre Situation zu analysieren und mögliche Wege zur Rückgewinnung Ihrer Gelder aufzuzeigen.</p>
+    <!-- Mission -->
+    <section class="section">
+      <h2>Unsere Mission</h2>
+      <p>Lost Fund Assistance hat es sich zur Aufgabe gemacht, Opfern von Online-Betrug und unseriösen Investitionen Hoffnung zu geben.  
+      Wir setzen alles daran, faire Lösungen zu finden, Gelder zurückzuführen und unsere Mandanten über ihre Rechte aufzuklären.</p>
+    </section>
 
-    <h2>Warum wir?</h2>
-    <p>- Mehrjährige Erfahrung im Bereich Finanzberatung  
-    - Persönlicher Ansatz für jeden Kunden  
-    - Diskrete und vertrauliche Bearbeitung Ihrer Daten  
-    - Internationale Reichweite</p>
-  </div>
+    <!-- Values -->
+    <section class="section">
+      <h2>Unsere Werte</h2>
+      <div class="values">
+        <div class="value-box">
+          <h3>Vertrauen</h3>
+          <p>Diskretion, Transparenz und Ehrlichkeit sind die Grundlagen unserer Arbeit. Ihre Daten sind bei uns sicher.</p>
+        </div>
+        <div class="value-box">
+          <h3>Kompetenz</h3>
+          <p>Unser Team besteht aus erfahrenen Finanzberatern und Analysten, die die Mechanismen von Betrug genau kennen.</p>
+        </div>
+        <div class="value-box">
+          <h3>Engagement</h3>
+          <p>Wir behandeln jeden Fall individuell und setzen uns persönlich dafür ein, das bestmögliche Ergebnis zu erzielen.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Process -->
+    <section class="section">
+      <h2>Unser Prozess</h2>
+      <div class="steps">
+        <div class="step-box">
+          <h4>1. Analyse</h4>
+          <p>Wir prüfen Ihre Situation detailliert und identifizieren mögliche Wege zur Rückforderung.</p>
+        </div>
+        <div class="step-box">
+          <h4>2. Beratung</h4>
+          <p>Unsere Experten entwickeln eine maßgeschneiderte Strategie, abgestimmt auf Ihre individuellen Bedürfnisse.</p>
+        </div>
+        <div class="step-box">
+          <h4>3. Maßnahmen</h4>
+          <p>Wir setzen geeignete rechtliche und strategische Schritte ein, um Ihre Chancen zu maximieren.</p>
+        </div>
+        <div class="step-box">
+          <h4>4. Begleitung</h4>
+          <p>Wir stehen Ihnen während des gesamten Prozesses als verlässlicher Partner zur Seite.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Why choose us -->
+    <section class="section">
+      <h2>Warum Lost Fund Assistance?</h2>
+      <p>Unsere Stärke liegt in unserer Kombination aus Erfahrung, internationalem Netzwerk und einem starken Engagement für unsere Mandanten.  
+      Wir wissen, dass es nicht nur um Geld geht – es geht auch um Vertrauen, Gerechtigkeit und das Zurückgewinnen von Sicherheit.</p>
+      <p>Mehr als 80% unserer Mandanten berichten, dass sie durch unsere Unterstützung wieder Hoffnung geschöpft haben – selbst in scheinbar aussichtslosen Fällen.</p>
+    </section>
+
+    <!-- Legal Office Address -->
+    <section class="section" style="background: rgba(0,0,0,0.3); border-radius:12px;">
+      <h2>Unser Büro</h2>
+      <p>Für unsere Mandanten ist es wichtig zu wissen, dass wir ein reales, rechtlich registriertes Büro haben.  
+      Sie können uns jederzeit postalisch erreichen:</p>
+
+      <p><strong>Lost Fund Assistance</strong><br>
+      Legal & Consulting Office<br>
+      Musterstraße 123<br>
+      10115 Berlin<br>
+      Deutschland</p>
+
+      <p><em>Hinweis: Dies ist unsere offizielle Geschäftsadresse.  
+      Persönliche Termine nur nach vorheriger Vereinbarung.</em></p>
+    </section>
+
+    <!-- CTA -->
+    <section class="cta">
+      <h2>Bereit für einen Neuanfang?</h2>
+      <a href="contact.html">Jetzt Kontakt aufnehmen</a>
+    </section>
+  </main>
 
   <footer>
     © 2025 Lost Fund Assistance — Alle Rechte vorbehalten
